UBO-416 Replaced new URL() by new URI().toURL()
# Conflicts:
#	ubo-common/src/main/java/org/mycore/ubo/lsf/LSFService.java