@@ -26,6 +26,7 @@ import org.mycore.ubo.picker.IdentityService;
 import org.mycore.ubo.picker.PersonSearchResult;
 
 import java.io.StringReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.text.Normalizer;
@@ -79,14 +80,14 @@ public class LSFService implements IdentityService {
 
             String baseURL = MCRConfiguration2.getStringOrThrow("UBO.LSF.SOAP.BaseURL");
 
-            URL soapSearchEndpoint = new URL(baseURL + "/soapsearch");
+            URL soapSearchEndpoint = new URI(baseURL + "/soapsearch").toURL();
             soapsearch = new SOAPSearchServiceLocator().getsoapsearch(soapSearchEndpoint);
 
             if (soapsearch instanceof org.apache.axis.client.Stub axisStub) {
                 axisStub.setTimeout(CONFIG_TIMEOUT);
             }
 
-            URL dbInterfaceEndpoint = new URL(baseURL + "/dbinterface");
+            URL dbInterfaceEndpoint = new URI(baseURL + "/dbinterface").toURL();
             dbinterface = new DBInterfaceServiceLocator().getdbinterface(dbInterfaceEndpoint);
         } catch (Exception ex) {
             String msg = "Could not locate HIS LSF WebService";
@@ -266,7 +267,8 @@ public class LSFService implements IdentityService {
                 if (doesFirstNameMatch(firstName, personResult.firstName)
                     && (personResult.pid != null)
                     && !retrievedIDs.contains(personResult.pid)) {
-                    personResult.displayName = personResult.lastName + ( personResult.firstName == null ? "" : ", " + personResult.firstName );
+                    personResult.displayName = personResult.lastName + (personResult.firstName == null ? "" : ", "
+                        + personResult.firstName);
                     results.add(personResult);
                     retrievedIDs.add(personResult.pid);
                     personResult.affiliation = new ArrayList<String>();
@@ -344,7 +346,7 @@ public class LSFService implements IdentityService {
     private void removeThoseWithNonMatchingFirstNames(String firstName, Element results) {
         String[] firstNameParts = getNormalizedNameParts(firstName);
 
-        for (Iterator<Element> iterator = results.getChildren().iterator(); iterator.hasNext();) {
+        for (Iterator<Element> iterator = results.getChildren().iterator(); iterator.hasNext(); ) {
             Element person = iterator.next();
             String vorname = person.getChildTextTrim("vorname");
             if (vorname == null) {
@@ -373,7 +375,8 @@ public class LSFService implements IdentityService {
     private String[] getNormalizedNameParts(String text) {
         text = text.toLowerCase(Locale.ROOT);
         text = new MCRHyphenNormalizer().normalize(text).replace("-", " ");
-        text = Normalizer.normalize(text, Form.NFD).replaceAll("\\p{M}", ""); // canonical decomposition, then remove accents
+        text = Normalizer.normalize(text, Form.NFD)
+            .replaceAll("\\p{M}", ""); // canonical decomposition, then remove accents
         text = text.replace("ue", "u").replace("oe", "o").replace("ae", "a").replace("ß", "s").replace("ss", "s");
         text = text.replaceAll("[^a-z0-9]\\s]", ""); //remove all non-alphabetic characters
         // text = text.replaceAll("\\b.{1,3}\\b", " ").trim(); // remove all words with fewer than four characters
